[package]
name = "cms_tools"
version = "0.1.0"
authors = ["Michael Chelli <michaelchelli00@gmail.com>"]
edition = "2018"
description = "A rust crate for interacting with the CMSocial competitive programming platform"
repository = "https://github.com/MyK00L/cms_tools"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11"
