[package]
name = "cms_tools"
version = "0.1.0"
description = "A rust crate for interacting with the CMSocial competitive programming platform"
repository = "https://github.com/MyK00L/cms_tools"
authors = ["Michael Chelli <michaelchelli00@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
reqwest = "0.9"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11"
